Jenkins - fix websocket cli/agent inbound connections by using jdk-8 (#52)
* Fix formatting in ./Makefile

* WIP - fix local tls certs, jcasc plugins, turn off JNLP port

* WIP - exported jcasc wo/secrets

* Mac compat

* WIP - debugging from Mac

* WIP - debugging items

* WIP - jdk8 as default

* WIP - working websockets jdk-8

* WIP - jdk11 still hangs with websocket agents