@@ -7,19 +7,35 @@ JAVA_OPTS="\
 -XX:+AlwaysPreTouch               \
 -XX:-PrintCommandLineFlags        \
 \
+-XX:NumberOfGCLogFiles=5          \
+-XX:+UseGCLogFileRotation         \
+-XX:GCLogFileSize=20m             \
+-XX:+PrintGC                      \
+-XX:+PrintGCDateStamps            \
+-XX:+PrintGCDetails               \
+-XX:+PrintHeapAtGC                \
+-XX:+PrintGCCause                 \
+-XX:+PrintTenuringDistribution    \
+-XX:+PrintReferenceGC             \
+-XX:+PrintAdaptiveSizePolicy      \
+\
 -XX:+UseG1GC                      \
 -XX:+ExplicitGCInvokesConcurrent  \
 -XX:+ParallelRefProcEnabled       \
 -XX:+UseStringDeduplication       \
 -XX:+UnlockExperimentalVMOptions  \
+-XX:G1NewSizePercent=20           \
 -XX:+UnlockDiagnosticVMOptions    \
--Xlog:gc*:file=/var/jenkins_home/gc.log::filecount=5,filesize=20m \
+-XX:G1SummarizeRSetStatsPeriod=1  \
+-Xloggc:/var/jenkins_home/gc.log  \
 \
 -Xms${JVM_OPT_XMS-1024m}  \
 -Xmx${JVM_OPT_XMX-1024m}  \
+-XX:MetaspaceSize=512M    \
 \
 -Djava.io.tmpdir=/tmp \
 \
+-Djava.net.preferIPv4Stack=true           \
 -Dhttp.proxyHost=${PROXY_HOST-}           \
 -Dhttp.proxyPort=${PROXY_PORT-}           \
 -Dhttps.proxyHost=${PROXY_HOST-}          \
@@ -37,11 +53,11 @@ JAVA_OPTS="\
 -Djenkins.InitReactorRunner.concurrency=64                              \
 -Dpermissive-script-security.enabled=no_security                        \
 -Dhudson.model.DirectoryBrowserSupport.CSP=                             \
--Djava.util.logging.config.file=/var/jenkins_home/logging.properties    \
 -Dhudson.footerURL=${FOOTER_URL}                                        \
 -Djenkins.model.Jenkins.workspacesDir=${JENKINS_WORKSPACE_LOCATION}     \
 -Djenkins.model.Jenkins.buildsDir=${JENKINS_BUILDS_LOCATION}            \
--Dhudson.InitReactorRunner.concurrency=$(($(nproc) * 8))"
+-Dhudson.InitReactorRunner.concurrency=$(($(nproc) * 8))                \
+${EXTRA_JAVA_OPTS-}"
 
 JENKINS_OPTS="${JENKINS_OPTS-\
 --httpPort=${HTTP_PORT-8080} \
@@ -52,7 +68,21 @@ JENKINS_OPTS="${JENKINS_OPTS-\
 --simpleAccessLogger.file=/var/jenkins_home/logs/access.log    \
 --extraLibFolder=/var/jenkins_home/extraLibs                   \
 --httpsPrivateKey=/var/jenkins_home/tls/server-rsa.pem         \
---httpsCertificate=/var/jenkins_home/tls/server-cert.pem} ${EXTRA_JENKINS_OPTS}"
+--httpsCertificate=/var/jenkins_home/tls/server-cert.pem}      \
+${EXTRA_JENKINS_OPTS-}"
+
+# Upstream: https://github.com/jenkinsci/docker/commit/0832831fa201e6c66e7f1a7f2da7aa73403a2671
+
+: "${JENKINS_WAR:="/usr/share/jenkins/jenkins.war"}"
+: "${JENKINS_HOME:="/var/jenkins_home"}"
+: "${COPY_REFERENCE_FILE_LOG:="${JENKINS_HOME}/copy_reference_file.log"}"
+: "${REF:="/usr/share/jenkins/ref"}"
+touch "${COPY_REFERENCE_FILE_LOG}" || { echo "Can not write to ${COPY_REFERENCE_FILE_LOG}. Wrong volume permissions?"; exit 1; }
+echo "--- Copying files at $(date)" >> "$COPY_REFERENCE_FILE_LOG"
+find "${REF}" \( -type f -o -type l \) -exec bash -c '. /usr/local/bin/jenkins-support; for arg; do copy_reference_file "$arg"; done' _ {} +
+
+
+JAVA_OPTS="$JAVA_OPTS -Xbootclasspath/p:$(echo `ls /var/jenkins_home/bootclasspath/*.jar` | tr ' ' ':')"
 
 echo "JENKINS_HOME               = ${JENKINS_HOME}"            
 echo "JENKINS_WORKSPACE_LOCATION = ${JENKINS_WORKSPACE_LOCATION}"
@@ -66,16 +96,6 @@ echo "HTTP_PORT   http/1.1       = ${HTTP_PORT-8080}"
 echo "HTTPS_PORT  https/1.1      = ${HTTPS_PORT-8443}"
 echo "HTTP2_PORT  http/2         = ${HTTP2_PORT-9443}"
 
-# Upstream: https://github.com/jenkinsci/docker/commit/0832831fa201e6c66e7f1a7f2da7aa73403a2671
-
-: "${JENKINS_WAR:="/usr/share/jenkins/jenkins.war"}"
-: "${JENKINS_HOME:="/var/jenkins_home"}"
-: "${COPY_REFERENCE_FILE_LOG:="${JENKINS_HOME}/copy_reference_file.log"}"
-: "${REF:="/usr/share/jenkins/ref"}"
-touch "${COPY_REFERENCE_FILE_LOG}" || { echo "Can not write to ${COPY_REFERENCE_FILE_LOG}. Wrong volume permissions?"; exit 1; }
-echo "--- Copying files at $(date)" >> "$COPY_REFERENCE_FILE_LOG"
-find "${REF}" \( -type f -o -type l \) -exec bash -c '. /usr/local/bin/jenkins-support; for arg; do copy_reference_file "$arg"; done' _ {} +
-
 # if `docker run` first argument start with `--` the user is passing jenkins launcher arguments
 if [[ $# -lt 1 ]] || [[ "$1" == "--"* ]]; then
 
@@ -88,7 +108,7 @@ if [[ $# -lt 1 ]] || [[ "$1" == "--"* ]]; then
   if [[ "$DEBUG" ]] ; then
     java_opts_array+=( \
       '-Xdebug' \
-      '-Xrunjdwp:server=y,transport=dt_socket,address=5005,suspend=y' \
+      '-Xrunjdwp:server=y,transport=dt_socket,address=*:8000,suspend=y' \
     )
   fi
 
